--- a/html-css/border.html
+++ b/html-css/border.html
@@ -21,10 +21,19 @@
         border: 1px #f00 dashed;
         padding: 20px 5px;
       }
+      /* border rounded corners */
+      .box{
+        width:300px;
+        height:150px;
+        background: #ffb6c1;
+        border: 2px solid #f08080;
+        border-radius: 20px;
+      }
     </style>
   </head>
   <body>
     <p>Some text</p>
     <div>Some text</div>
+    <div class="box"></div>
   </body>
 </html>
