adding some style

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -41,7 +41,7 @@
                 <div class="content">
                     <div class="content-details">
                         <h1 class="title">Time travel to the future.</h1>
-                        <p class="paragraph">
+                        <p class="description">
                             If you want to view your future, this is the best
                             place. Signup now and wait for your turn. Hurry, few
                             lucky people will travel.
@@ -72,10 +72,10 @@
                     </div>
                 </div>
             </div>
-            <img src="/landing_page/images/liq-1.png" alt="" class="blob blog-1">
+            <!-- <img src="/landing_page/images/liq-1.png" alt="" class="blob blog-1">
             <img src="/landing_page/images/liq-2.png" alt="" class="blob blog-2">
             <img src="/landing_page/images/liq-3.png" alt="" class="blob blog-3">
-            <img src="/landing_page/images/liq-6.png" alt="" class="blob blog-4">
+            <img src="/landing_page/images/liq-6.png" alt="" class="blob blog-4"> -->
         </section>
     </body>
 </html>
