end styling & end tutorial

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -15,7 +15,7 @@
         <header>
             <div class="container">
                 <nav class="nav">
-                    <a href="index.html" class="logo">
+                    <a href="index.html" class="logo hue-shift">
                         <img
                             src="/landing_page/images/logo.png"
                             class="logo"
@@ -47,35 +47,52 @@
                             lucky people will travel.
                         </p>
                         <div class="search">
-                          <input type="text" class="search-bar" placeholder="Your email address" required>
-                          <input type="button" class="search-btn" value="Join">
+                            <input
+                                type="text"
+                                class="search-bar"
+                                placeholder="Your email address"
+                                required
+                            />
+                            <input
+                                type="button"
+                                class="search-btn hue-shift"
+                                value="Join"
+                            />
                         </div>
                         <div class="sm-list">
-                          <a href="#" class="sm-link">
-                            <i class="fab fa-twitter"></i>
-                          </a>
-                          <a href="#" class="sm-link">
-                            <i class="fab fa-instagram"></i>
-                          </a>
-                          <a href="#" class="sm-link">
-                            <i class="fab fa-facebook-f"></i>
-                          </a>
-                          <a href="#" class="sm-link">
-                            <i class="fab fa-linkedin-in"></i>
-                          </a>
+                            <a href="#" class="sm-link">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#" class="sm-link">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="#" class="sm-link">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#" class="sm-link">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
                         </div>
                     </div>
 
-                    <div class="image-group">
-                      <img src="/landing_page/images/liq-5.png" alt="" class="blob-large">
-                      <img src="/landing_page/images/liq-4.png" alt="" class="blob-bean">
+                    <div class="image-group hue-shift">
+                        <img
+                            src="/landing_page/images/liq-5.png"
+                            alt=""
+                            class="blob-large"
+                        />
+                        <img
+                            src="/landing_page/images/liq-4.png"
+                            alt=""
+                            class="blob-bean"
+                        />
                     </div>
                 </div>
             </div>
-            <!-- <img src="/landing_page/images/liq-1.png" alt="" class="blob blog-1">
-            <img src="/landing_page/images/liq-2.png" alt="" class="blob blog-2">
-            <img src="/landing_page/images/liq-3.png" alt="" class="blob blog-3">
-            <img src="/landing_page/images/liq-6.png" alt="" class="blob blog-4"> -->
+            <img src="/landing_page/images/liq-1.png" alt="" class="blob blob-1 hue-shift">
+            <img src="/landing_page/images/liq-2.png" alt="" class="blob blob-2 hue-shift">
+            <img src="/landing_page/images/liq-3.png" alt="" class="blob blob-3 hue-shift">
+            <img src="/landing_page/images/liq-6.png" alt="" class="blob blob-4 hue-shift">
         </section>
     </body>
 </html>
