features, about & newsletter

--- a/yt_tutorial/index.html
+++ b/yt_tutorial/index.html
@@ -45,9 +45,97 @@
                 <a href="#" class="btn">download now</a>
             </div>
             <div class="image">
-              <img src="images/home-img.png" alt="">
+                <img src="images/home-img.png" alt="" />
             </div>
         </section>
         <!-- home sections end -->
+
+        <!-- features section starts -->
+        <section class="features" id="features">
+            <h1 class="heading">app features</h1>
+            <div class="box-container">
+                <div class="box">
+                    <img src="images/f-icon1.png" alt="" />
+                    <h3>amazing UI design</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit. Tempora porro facilis eius exercitationem eos quia
+                        numquam nostrum, dolor cupiditate nesciunt?
+                    </p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+                <div class="box">
+                    <img src="images/f-icon2.png" alt="" />
+                    <h3>soft and smooth animation</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit. Tempora porro facilis eius exercitationem eos quia
+                        numquam nostrum, dolor cupiditate nesciunt?
+                    </p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+                <div class="box">
+                    <img src="images/f-icon3.png" alt="" />
+                    <h3>friendly interactions</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit. Tempora porro facilis eius exercitationem eos quia
+                        numquam nostrum, dolor cupiditate nesciunt?
+                    </p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- features section ends -->
+
+        <!-- about section starts -->
+
+        <section class="about" id="about">
+            <h1 class="heading">about the app</h1>
+
+            <div class="column">
+                <div class="image">
+                    <img src="images/about-img.png" alt="" />
+                </div>
+                <div class="content">
+                    <h3>Easy and Perfect Solution For Your Business App</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit. Mollitia voluptatibus quam cum provident vel eius
+                        beatae consequuntur voluptate nisi repudiandae.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perspiciatis nesciunt aliquid quos ut totam quasi eos
+                        corrupti laboriosam magnam vero?
+                    </p>
+                    <div class="buttons">
+                        <a href="#" class="btn">
+                            <i class="fab fa-apple"></i> app store
+                        </a>
+                        <a href="#" class="btn">
+                            <i class="fab fa-google"></i> google play
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- about section ends -->
+
+        <!-- newsletter section -->
+        <div class="newsletter">
+            <h3>Subscribe For New features</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+                suscipit, et eveniet odit quaerat esse quas debitis eum quae
+                atque!
+            </p>
+            <form action="">
+              <input type="email" placeholder="enter your e-mail">
+              <input type="submit" value="Subscribe">
+            </form>
+        </div>
     </body>
 </html>
