--- a/yt_tutorial/index.html
+++ b/yt_tutorial/index.html
@@ -133,9 +133,135 @@
                 atque!
             </p>
             <form action="">
-              <input type="email" placeholder="enter your e-mail">
-              <input type="submit" value="Subscribe">
+                <input type="email" placeholder="enter your e-mail" />
+                <input type="submit" value="Subscribe" />
             </form>
         </div>
+        <!-- newsletter section ends -->
+
+        <!-- review section starts -->
+
+        <section class="review" id="review">
+            <h1 class="heading">people's review</h1>
+
+            <div class="box-container">
+                <div class="box">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="/yt_tutorial/images/pic1.png" alt="" />
+                        <h3>john deo</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="comment">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Quaerat atque aliquid, nobis voluptatibus
+                            laudantium reiciendis fugit magnam placeat totam
+                            adipisci.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="/yt_tutorial/images/pic2.png" alt="" />
+                        <h3>john deo</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <div class="comment">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Quaerat atque aliquid, nobis voluptatibus
+                            laudantium reiciendis fugit magnam placeat totam
+                            adipisci.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="/yt_tutorial/images/pic3.png" alt="" />
+                        <h3>john deo</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                        <div class="comment">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Quaerat atque aliquid, nobis voluptatibus
+                            laudantium reiciendis fugit magnam placeat totam
+                            adipisci.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- review section ends -->
+
+        <!-- pricing section starts -->
+
+        <section class="pricing" id="pricing">
+            <h1 class="heading">Our pricing plans</h1>
+
+            <div class="box-container">
+                <div class="box">
+                    <h3 class="title">basic</h3>
+                    <div class="price">$10<span>/monthly</span></div>
+                    <ul>
+                        <li><i class="fas fa-check"></i> 1000+ downloads</li>
+                        <li>
+                            <i class="fas fa-check"></i> No transaction fees
+                        </li>
+                        <li><i class="fas fa-times"></i> unlimited storage</li>
+                        <li><i class="fas fa-times"></i> 5 downlaods</li>
+                    </ul>
+                    <a href="#" class="btn"> check out</a>
+                </div>
+
+                <div class="box">
+                    <h3 class="title">standard</h3>
+                    <div class="price">$15<span>/monthly</span></div>
+                    <ul>
+                        <li><i class="fas fa-check"></i> 1000+ downloads</li>
+                        <li>
+                            <i class="fas fa-check"></i> No transaction fees
+                        </li>
+                        <li><i class="fas fa-check"></i> unlimited storage</li>
+                        <li><i class="fas fa-times"></i> 5 downlaods</li>
+                    </ul>
+                    <a href="#" class="btn"> check out</a>
+                </div>
+
+                <div class="box">
+                    <h3 class="title">premium</h3>
+                    <div class="price">$25<span>/monthly</span></div>
+                    <ul>
+                        <li><i class="fas fa-check"></i> 1000+ downloads</li>
+                        <li>
+                            <i class="fas fa-check"></i> No transaction fees
+                        </li>
+                        <li><i class="fas fa-check"></i> unlimited storage</li>
+                        <li><i class="fas fa-check"></i> 5 downlaods</li>
+                    </ul>
+                    <a href="#" class="btn"> check out</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- pricing section ends -->
     </body>
 </html>
