--- a/yt_tutorial/index.html
+++ b/yt_tutorial/index.html
@@ -263,5 +263,109 @@
         </section>
 
         <!-- pricing section ends -->
+
+        <!-- contact section starts -->
+
+        <section class="contact" id="contact">
+            <div class="image">
+                <img src="/yt_tutorial/images/contact-img.png" alt="" />
+            </div>
+
+            <form action="">
+                <h1 class="heading">contact us</h1>
+                <div class="inputBox">
+                    <input type="text" required />
+                    <label for="">name</label>
+                </div>
+
+                <div class="inputBox">
+                    <input type="email" required />
+                    <label for="">email</label>
+                </div>
+
+                <div class="inputBox">
+                    <input type="phone" required />
+                    <label for="">phone</label>
+                </div>
+
+                <div class="inputBox">
+                    <textarea
+                        required
+                        name=""
+                        id=""
+                        cols="30"
+                        rows="10"
+                    ></textarea>
+                    <label for="">message</label>
+                </div>
+
+                <input type="submit" class="btn" value="send message" />
+            </form>
+        </section>
+
+        <!-- contact section ends -->
+
+        <!-- footer section starts -->
+
+        <div class="footer">
+            <div class="box-container">
+                <div class="box">
+                    <h3>about us</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit. Debitis ut illo quidem ea temporibus aliquid sed
+                        laudantium sunt cum asperiores?
+                    </p>
+                </div>
+
+                <div class="box">
+                    <h3>quick links</h3>
+                    <a href="#">home</a>
+                    <a href="#">features</a>
+                    <a href="#">about</a>
+                    <a href="#">review</a>
+                    <a href="#">pricing</a>
+                    <a href="#">contact</a>
+                </div>
+
+                <div class="box">
+                    <h3>follow us</h3>
+                    <a href="#">facebook</a>
+                    <a href="#">instagram</a>
+                    <a href="#">pinterest</a>
+                    <a href="#">twitter</a>
+                </div>
+
+                <div class="box">
+                    <h3>contact info</h3>
+                    <div class="info">
+                        <i class="fas fa-phone"></i>
+                        <p>
+                            +123-456-7890 <br />
+                            +111-222-333
+                        </p>
+                    </div>
+
+                    <div class="info">
+                        <i class="fas fa-envelope"></i>
+                        <p>
+                            example@example.com <br />
+                            example@example.com
+                        </p>
+                    </div>
+
+                    <div class="info">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p>kielce, poland</p>
+                    </div>
+                </div>
+            </div>
+
+            <h1 class="credit">
+                &copy; copyright @ 2022 by mr. web designer - tutorial author
+            </h1>
+        </div>
+
+        <!-- footer section ends -->
     </body>
 </html>
