--- a/yt_tutorial_2/index.html
+++ b/yt_tutorial_2/index.html
@@ -46,6 +46,55 @@
                     <img src="/yt_tutorial_2/images/web design.png" />
                 </div>
             </div>
+            <!-- timing -->
+            <div class="timing">
+                <!-- office-time -->
+                <div class="office-time">
+                    <h3>Office Hours</h3>
+                    <p>Monday - Friday <font>8:00 AM - 6:00</font> PM CST</p>
+                </div>
+                <!-- office-contact -->
+                <div class="office-number">
+                    <h3>Do you need to call us? <br />We are here to listen</h3>
+                    <p>
+                        Call <font>1-234-567-8912</font> During Business Hours.
+                    </p>
+                </div>
+            </div>
+
+            <!-- arrow -->
+            <div class="arrow"></div>
+            <span class="scroll">Scroll</span>
+        </section>
+        <!-- services -->
+        <section class="services">
+            <!-- heading -->
+            <div class="services-heading">
+                <h2>Website Services Which We Provided.</h2>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Nisi natus enim libero, cumque illum tenetur sunt distinctio
+                    sequi accusantium suscipit voluptate? Iusto vitae pariatur
+                    incidunt. Distinctio nam magnam architecto sit.
+                </p>
+            </div>
+            <!-- box-container -->
+            <div class="box-container">
+                <!-- box-1 -->
+                <div class="box">
+                    <img src="/yt_tutorial_2/images/login.svg" />
+                    <font>Log-In to our secure Website</font>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Sequi dicta nisi eos similique accusantium, ex iste
+                        perferendis, ab tenetur laudantium odit quaerat
+                        voluptate harum placeat id quibusdam expedita accusamus
+                        numquam.
+                    </p>
+                    <!-- btn -->
+                    <a href="#">Log In</a>
+                </div>
+            </div>
         </section>
     </body>
 </html>
