add boxes, footer and working on mobile menu

--- a/yt_tutorial_2/index.html
+++ b/yt_tutorial_2/index.html
@@ -17,6 +17,11 @@
                 <a href="#" class="logo"
                     ><img src="/yt_tutorial_2/images/logo.png" alt=""
                 /></a>
+                <!-- menu-btn -->
+                <input type="checkbox" class="menu-btn" id="menu-btn"/>
+                <label for="menu-btn" class="menu-icon">
+                    <span class="nav-icon"></span>
+                </label>
                 <!-- menu -->
                 <ul class="menu">
                     <li><a href="#">Home</a></li>
@@ -94,7 +99,70 @@
                     <!-- btn -->
                     <a href="#">Log In</a>
                 </div>
+                 <!-- box-2 -->
+                 <div class="box">
+                    <img src="/yt_tutorial_2/images/account view.svg" />
+                    <font>View Your Website</font>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Sequi dicta nisi eos similique accusantium, ex iste
+                        perferendis, ab tenetur laudantium odit quaerat
+                        voluptate harum placeat id quibusdam expedita accusamus
+                        numquam.
+                    </p>
+                    <!-- btn -->
+                    <a href="#">View</a>
+                </div>
+                 <!-- box-3 -->
+                 <div class="box">
+                    <img src="/yt_tutorial_2/images/payment method.svg" />
+                    <font>Select Your Plan</font>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Sequi dicta nisi eos similique accusantium, ex iste
+                        perferendis, ab tenetur laudantium odit quaerat
+                        voluptate harum placeat id quibusdam expedita accusamus
+                        numquam.
+                    </p>
+                    <!-- btn -->
+                    <a href="#">Select Plan</a>
+                </div>
+                 <!-- box-4 -->
+                 <div class="box">
+                    <img src="/yt_tutorial_2/images/lock.svg" />
+                    <font>Login in secure website</font>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Sequi dicta nisi eos similique accusantium, ex iste
+                        perferendis, ab tenetur laudantium odit quaerat
+                        voluptate harum placeat id quibusdam expedita accusamus
+                        numquam.
+                    </p>
+                    <!-- btn -->
+                    <a href="#">Log In</a>
+                </div>
+                 <!-- box-5 -->
+                 <div class="box">
+                    <img src="/yt_tutorial_2/images/document.svg" />
+                    <font>Confirm Your Websites</font>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Sequi dicta nisi eos similique accusantium, ex iste
+                        perferendis, ab tenetur laudantium odit quaerat
+                        voluptate harum placeat id quibusdam expedita accusamus
+                        numquam.
+                    </p>
+                    <!-- btn -->
+                    <a href="#">View</a>
+                </div>
             </div>
         </section>
+
+        <!-- footer -->
+
+        <footer>
+            <a href="#">Lorem Ipsum, Consumer</a>
+            <p>Copyright © 2022</p>
+        </footer>
     </body>
 </html>
